[package]
name = "rust-aha-fs"
version = "0.1.0"
authors = ["becker <github@deathbyescalator.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netfuse = "*"
lazy_static = "*"
time = "*"
libc ="*"
fuse = "0.2.7"
termion = "*"
dirs = "1"
url = "*"
toml = "*"
notify-rust = "3"
regex = "1"
failure = "*"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
reqwest = "^0.9.0"
prettytable-rs = "0.7.0"
structopt = "0.2.10"
dotenv = "0.13.0"
envy = "0.3.2"
log = "0.4.3"
env_logger = "0.5.10"
text_io = "0.1"
